TODO
	* : Improve simplewc-msg functionality
	* : Code cleanup
	* : Tags should be renamed to virtual workspace (vws)

v0.4 -> v0.5 Changes
2025-06-16
	* meson.build: bump wlroots version from 0.18 to 0.19

v0.3 -> v0.4 Changes
2025-06-12
	* include/output.h: add fixed_tag to fix a tag for an output 
	* include/server.h: renamed from client_outline to simple_outline
	* src/input.c: prevent move/resize client if the geometry is identical
	* src/input.c: implement tablet capability
	* src/client.c: set_client_geometry() takes a flag to request resize
	* src/client.c: Fix border drawing for xwayland clients
	* src/client.c: tileClient() can take 4 directions (UP,DOWN,LEFT,RIGHT)
	* src/config.c: Add config options for tablet rotation and boundary

2025-06-01
	* meson.build: Remove simplewc-msg executable
	* src/main.c: add --exit option to exit current simplewc instance
	* src/client.c: Fix segfault upon destroy_notify()
	* src/config.c: Remove no longer used reloadConfiguration()

2025-05-30
	* src/main.c: Move main.c to proper location
	* src/input.c: Fix segfault on keyboard unplug
	* src/output.c: Cosmetic changes, add print_server_info() in a few places
	to update ipc calls
	* src/client.c: Remove hardcoded outline width. It will be twice the
	border_width

2025-05-14
	* src/output.c: Fix client relocation on output change
	* src/input.c: Do not render mouse pointer when it's constrained
	* src/client.c: Support placement of new clients (under mouse/cenetered/hybrid)
	* src/config.c: Add new config parameter new_client_placement

2025-04-26
	* meson.build: add pointer-constraints-unstable-v1 protocol 
	* src/input.c: implement wlr_pointer_constraints_v1
	* src/client.c: maximize client function changed to toggle_maximize, the
	client geometry will revert back to previous upon toggle
	* config/configrc: change maximize to toggle_maximize

2025-04-12
	* : Moving onto v0.4
	* README.md: Update for v0.4

v0.2 -> v0.3 Changes
2025-04-10: