@@ -117,10 +117,6 @@ struct simple_server {
    struct wlr_output_power_manager_v1 *output_power_manager;
    struct wl_listener output_pm_set_mode;
 
-   // gamma control manager
-   struct wlr_gamma_control_manager_v1 *gamma_control_manager;
-   struct wl_listener set_gamma;
-
    // background layer
    struct wlr_scene_rect *root_bg;
 
